--- a/style.css
+++ b/style.css
@@ -1,4 +1,64 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.fundo {
+    background-image: linear-gradient(90deg, #3F1D38, #4D3C77, #704F82);
+    background-size: 400% 400%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculadora {
+    position: absolute;
+    background-color: #E1D8F0;
+    color: #3F1D38;
+    font-family: 'Lora', serif;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 250px;
+    text-align: center;
+}
+
+.botão {
+    width: 50px;
+    height: 50px;
+    background-color: #4D3C77;
+    font-size: 15px;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.botão:hover {
+    background-color: #3F1D38;
+}
+
+#resultado{
+    background-color: #fff;
+    color: #3F1D38;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: right;
+    padding: 10px;
+    text-align: left;
+    padding: 10px;
+    box-sizing: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
